--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html,body{
 #ptop{
     padding: 0px 30%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     color: white;
@@ -72,7 +73,7 @@ html,body{
     background-color: rgb(5, 178, 178);
     color: white;
     border-radius: 50%;
-    font-weight: 500;
+    font-weight: 1000;
 }
 
 .bubble:hover {
@@ -89,4 +90,22 @@ html,body{
     width: 100%;
     height: 400px;
     color: rgb(1, 105, 146);
+}
+
+@media screen and (max-width: 1080px) {
+    #ptop{
+        padding: 0 10%;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    #ptop{
+        padding: 0 10%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #ptop{
+        padding: 0 10%;
+    }
 }
